# balance_manager

./: .env_example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/balance/: models.py  services.py
app/balance/rest/: serealizers.py  urls.py  views.py
apps/balance/: admin.py  models.py  services.py
apps/balance/migrations/: 0001_initial.py  0002_transaction_transaction_type_and_more.py
apps/balance/rest/: serealizers.py  urls.py  views.py
core/: logging.py  settings.py  urls.py  yasg.py
